# RK

./: CMakeLists.txt
.github/workflows/: build.yml
Adapter Design Pattern/: CrappyArrayInventory.cpp  CrappyArrayInventory.h  Item.h  ModernInventory.h  adapter_pattern  main.cpp
Adapter Design Pattern/tests/: CrappyArrayTest.cpp  ModernInventoryTest.cpp
